trying to fix image stretching on mobile

--- a/style.css
+++ b/style.css
@@ -68,13 +68,14 @@
 	font-family: 'Bree Serif', sans-serif;
 	text-align: left;
 	font-weight: normal;
-	font-size:2.15em;
+	font-size:2em;
 	flex: 0 0 80%;
   }
 
   .heading-image img {
 	max-width: 100%;
-	height: 100%;
+	object-fit: cover;
+	height: auto;
   }
 
   
